@startuml staffflow_class_diagram_v2
' StaffFlow v1.0 - Diagrama de Clases - Entidades JPA (Dominio)
' DDL v4 · @author Santiago Castillo · iLERNA TFG DAM 2025/2026

skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam shadowing false
skinparam classFontStyle bold
skinparam classFontSize 11
skinparam classAttributeFontSize 10
skinparam roundcorner 6

title StaffFlow v1.0 - Diagrama de Clases - Entidades JPA (Dominio)

class Usuario {
    +Long id
    +String username
    +String password_hash
    +String email
    +Rol rol
    +Boolean activo
    +LocalDateTime fecha_creacion
    +String reset_token
    +LocalDateTime reset_token_expiry
}

class Empleado {
    +Long id
    +Long usuario_id
    +String nombre
    +String apellido1
    +String apellido2
    +String dni
    +String numero_empleado
    +LocalDate fecha_alta
    +CategoriaEmpleado categoria
    +Integer jornada_semanal_horas
    +Integer jornada_diaria_minutos
    +Integer dias_vacaciones_anuales
    +Integer dias_asuntos_propios_anuales
    +String pin_terminal
    +String codigo_nfc
    +Boolean activo
}

class Fichaje {
    +Long id
    +Long empleado_id
    +LocalDate fecha
    +TipoFichaje tipo
    +LocalDateTime hora_entrada
    +LocalDateTime hora_salida
    +Integer total_pausas_minutos
    +Integer jornada_efectiva_minutos
    +Long usuario_id
    +String observaciones
    +LocalDateTime fecha_creacion
}

class Pausa {
    +Long id
    +Long empleado_id
    +LocalDate fecha
    +LocalDateTime hora_inicio
    +LocalDateTime hora_fin
    +Integer duracion_minutos
    +TipoPausa tipo_pausa
    +Long usuario_id
    +String observaciones
    +LocalDateTime fecha_creacion
}

class PlanificacionAusencia {
    +Long id
    +Long empleado_id
    +LocalDate fecha
    +TipoAusencia tipo_ausencia
    +Boolean procesado
    +Long usuario_id
    +String observaciones
    +LocalDateTime fecha_creacion
}

class SaldoAnual {
    +Long id
    +Long empleado_id
    +Integer anio
    +Integer dias_trabajados
    +Integer dias_baja_medica
    +Integer dias_permiso_retribuido
    +Integer dias_ausencia_injustificada
    +Integer dias_vacaciones_derecho_anio
    +Integer dias_vacaciones_pendientes_anio_anterior
    +Integer dias_vacaciones_consumidos
    +Integer dias_vacaciones_disponibles
    +Integer dias_asuntos_propios_derecho_anio
    +Integer dias_asuntos_propios_pendientes_anterior
    +Integer dias_asuntos_propios_consumidos
    +Integer dias_asuntos_propios_disponibles
    +BigDecimal horas_ausencia_retribuida
    +BigDecimal saldo_horas
    +LocalDate calculado_hasta_fecha
    +LocalDateTime fecha_ultima_modificacion
}

class ConfiguracionEmpresa {
    +Long id
    +String nombre_empresa
    +String cif
    +String direccion
    +String email
    +String telefono
    +String logo_path
}

' ─── RELACIONES ──────────────────────────────────────────────
Usuario        "1" -- "1" Empleado             : vinculado_a
Empleado       "1" -- "*" Fichaje              : registra
Empleado       "1" -- "*" Pausa                : realiza
Empleado       "1" -- "*" PlanificacionAusencia : solicita
Empleado       "1" -- "*" SaldoAnual            : tiene
Fichaje        "*" -- "1" Usuario              : auditado_por
Pausa          "*" -- "1" Usuario              : auditado_por
PlanificacionAusencia "*" -- "1" Usuario       : gestionado_por

@enduml
